--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9000
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
-spring.thymeleaf.content-type=text/html
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=utf-8
 #spring.thymeleaf.mode=HTML
@@ -13,6 +13,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=3000
 mybatis.mapper-locations=classpath:/mapper/*.xml
+
 #durid
 spring.datasource.url=jdbc:mysql://localhost:3306/seckilldb?useUnicode=true&characterEncoding=utf8&useSSL=false
 #spring.datasource.url=jdbc:mysql://47.102.132.185:3306/seckilldb?useUnicode=true&characterEncoding=utf8&useSSL=false
@@ -21,56 +22,41 @@ spring.datasource.password=root
 #spring.datasource.password=cn.AndiOS.lsd123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#\u5730\u5740\uFF1Ahttp://localhost:9000/druid/index.html
 # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
-# \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
-spring.datasource.initialSize=5
-#\u6700\u5C0F\u7A7A\u95F2\u6570
-spring.datasource.minIdle=5
-#\u6700\u5927\u8FDE\u63A5\u6570
-spring.datasource.maxActive=40000
+# \u521D\u59CB\u5316\u5927\u5C0F\u3001\u6700\u5C0F\u3001\u6700\u5927\u8FDE\u63A5\u6570
+spring.datasource.druid.initial-size=3
+spring.datasource.druid.min-idle=3
+spring.datasource.druid.max-active=10
 # \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
-spring.datasource.maxWait=60000
-# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
-spring.datasource.timeBetweenEvictionRunsMillis=2000
-# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=true
-spring.datasource.testOnReturn=true
-# \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
-spring.datasource.filters=stat,wall,log4j
-# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;
-# \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
-#spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.druid.max-wait=60000
+# \u76D1\u63A7\u540E\u53F0\u8D26\u53F7\u548C\u5BC6\u7801
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+# \u914D\u7F6E StatFilter
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=2000
+spring.datasource.druid.reset-stat-enable=false
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
 
 # REDIS (RedisProperties)
-spring.redis.host=47.102.132.185
+spring.redis.host=114.115.211.121
 spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.password=andios1423!!!;
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u517116\u4E2A\uFF0C\u7D22\u5F15\u4ECE0\u5F00\u59CB\uFF0C\u9ED8\u8BA4\u7B2C1\u4E2A\uFF09
 spring.redis.database=0
 # \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.pool.max-active=3000
-# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.pool.max-wait=-1
+spring.redis.jedis.pool.max-active=3000
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.pool.max-idle=8
+spring.redis.jedis.pool.max-idle=8
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.pool.min-idle=0
-# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
-spring.redis.timeout=10
+spring.redis.jedis.pool.min-idle=0
+spring.redis.timeout=1000ms
 
 #static
 spring.resources.add-mappings=true
-spring.resources.cache-period=3600
 spring.resources.chain.cache=true
 spring.resources.chain.enabled=true
-spring.resources.chain.gzipped=true
 spring.resources.chain.html-application-cache=true
 spring.resources.static-locations=classpath:/static/
 
@@ -80,17 +66,15 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
-spring.rabbitmq.listener.concurrency=10
-spring.rabbitmq.listener.max-concurrency=10
+spring.rabbitmq.listener.simple.concurrency=10
+spring.rabbitmq.listener.simple.max-concurrency=10
 #\u6BCF\u6B21\u4ECE\u961F\u5217\u4E2D\u53D6\u51E0\u4E2A
-spring.rabbitmq.listener.prefetch=1
-spring.rabbitmq.listener.auto-startup=true
+spring.rabbitmq.listener.direct.prefetch=1
+spring.rabbitmq.listener.direct.auto-startup=true
 #\u6D88\u8D39\u8005\u6D88\u8D39\u5931\u8D25\u4E4B\u540E\uFF0C\u4F1A\u628A\u6570\u636E\u91CD\u65B0\u538B\u5165\u961F\u5217
-spring.rabbitmq.listener.default-requeue-rejected=true
+spring.rabbitmq.listener.direct.default-requeue-rejected=true
 spring.rabbitmq.template.retry.enabled=true
-spring.rabbitmq.template.retry.initial-interval=1000
 spring.rabbitmq.template.retry.max-attempts=3
-spring.rabbitmq.template.retry.max-interval=10000
 spring.rabbitmq.template.retry.multiplier=1.0
 #\u6D88\u606F\u53D1\u9001\u5230\u4EA4\u6362\u673A\u786E\u8BA4\u673A\u5236,\u662F\u5426\u786E\u8BA4\u56DE\u8C03
 #\u5982\u679C\u6CA1\u6709\u672C\u6761\u914D\u7F6E\u4FE1\u606F\uFF0C\u5F53\u6D88\u8D39\u8005\u6536\u5230\u751F\u4EA7\u8005\u53D1\u9001\u7684\u6D88\u606F\u540E\uFF0C\u751F\u4EA7\u8005\u65E0\u6CD5\u6536\u5230\u786E\u8BA4\u6210\u529F\u7684\u56DE\u8C03\u4FE1\u606F
